--- a/styles/light.css
+++ b/styles/light.css
@@ -7,7 +7,7 @@
 */
 
 .page.theme_light {
-  --background-color: #ffffff;
+  --background-color: #fff1f7;
   --text-color: #000000;
   --accent-color: #ff8dcb;
   --header-background: transparent;
