--- a/styles/style.css
+++ b/styles/style.css
@@ -125,3 +125,137 @@
   content: '•';
   margin-right: 0.25rem;
 }
+
+/* Стили для первого блока (две колонки) */
+.content-first {
+  display: grid; /* Используем Grid */
+  grid-template-columns: 1fr 2fr; /* Первая колонка = 1/3, вторая колонка = 2/3 */
+  gap: 2rem; /* Отступ между колонками */
+  padding: 1rem; /* Внешние отступы */
+  max-width: 85rem; /* Максимальная ширина контента */
+  margin: 0 auto; /* Центрируем контент */
+}
+
+.section__title {
+  font-size: clamp(1rem, 2vw, 1.5rem); /* Адаптивный размер заголовка */
+  font-weight: bold; /* Жирность текста */
+  color: #353430; /* Цвет текста */
+  text-align: left; /* Выравнивание по левому краю */
+  line-height: 1.2;
+  padding-top: 1.5rem;
+  font-family: 'IBM Plex Mono', monospace;
+  margin-bottom: 1rem; /* Отступ между заголовком и текстом */
+}
+
+.section__highlight {
+  font-size: clamp(1rem, 2vw, 1.5rem); /* Адаптивный размер текста */
+  background-color: #FF8DCB; /* Цвет выделения */
+  font-weight: bold; /* Жирность текста */
+  display: block; /* Делаем элемент блочным */
+  width: 100%; /* Растягиваем на всю ширину */
+  padding: 0.1rem 0; /* Добавляем внутренние отступы */
+  box-sizing: border-box; /* Учитываем padding в ширине */
+  margin-bottom: 0.5rem;
+  margin-top: 1.5rem; /* Добавляем внешние отступы */
+}
+
+.section__text {
+  font-size: clamp(1rem, 2vw, 1.25rem); /* Адаптивный размер текста */
+  color: #353430; /* Цвет текста */
+  line-height: 1.2; /* Межстрочный интервал */
+  font-family: 'IBM Plex Mono', monospace;
+  text-align: left; /* Выравнивание текста по ширине */
+}
+
+/* Стили для второго блока (три колонки) */
+.content-second {
+  display: grid; /* Используем Grid */
+  grid-template-columns: 1fr 1fr 1fr; /* Три равные колонки */
+  gap: 2rem; /* Отступ между колонками */
+  padding: 1rem; /* Внешние отступы */
+  max-width: 85rem; /* Максимальная ширина контента */
+  margin: 0 auto; /* Центрируем контент */
+}
+
+.column {
+  display: flex;
+  flex-direction: column; /* Элементы внутри колонки расположены вертикально */
+  align-items: flex-start; /* Выравнивание по левому краю */
+}
+
+.column__title {
+  font-size: clamp(1rem, 2vw, 1.5rem); /* Адаптивный размер заголовка */
+  font-weight: bold; /* Жирность текста */
+  color: #353430; /* Цвет текста */
+  text-align: left; /* Выравнивание по левому краю */
+  line-height: 1.2;
+  padding-top: 1.5rem;
+  font-family: 'IBM Plex Mono', monospace;
+  margin-bottom: 0.2rem; /* Отступ между заголовком и текстом */
+}
+
+.column__highlight {
+  font-size: clamp(1rem, 2vw, 1.5rem); /* Адаптивный размер текста */
+  background-color: #FF8DCB; /* Цвет выделения */
+  font-weight: bold; /* Жирность текста */
+  display: block; /* Делаем элемент блочным */
+  width: 100%; /* Растягиваем на всю ширину */
+  padding: 0.1rem 0; /* Добавляем внутренние отступы */
+  box-sizing: border-box; /* Учитываем padding в ширине */
+  margin-bottom: 0.5rem;
+  margin-top: 1.5rem; /* Добавляем внешние отступы */
+}
+
+.column__text {
+  font-size: clamp(1rem, 2vw, 1.25rem); /* Адаптивный размер текста */
+  color: #353430; /* Цвет текста */
+  line-height: 1.2; /* Межстрочный интервал */
+  font-family: 'IBM Plex Mono', monospace;
+  text-align: justify; /* Выравнивание текста по ширине */
+}
+
+
+/* Опускаем второй и третий спаны */
+.column--second .column__highlight,
+.column--third .column__highlight {
+  margin-top: 6.8rem; /* Опускаем спаны на 4rem */
+}
+
+@media (max-width: 767px) {
+  .content-second {
+    grid-template-columns: 1fr; /* Одна колонка */
+  }
+
+  .column {
+    order: initial; /* Восстанавливаем порядок */
+  }
+
+  /* Убираем отступы для мобильной версии */
+  .column--second .column__highlight,
+  .column--third .column__highlight {
+    margin-top: 0; /* Сбрасываем отступы */
+  }
+}
+
+
+/* Медиавыражение для маленьких экранов */
+@media (max-width: 767px) {
+  .content-first {
+    grid-template-columns: 1fr; /* Одна колонка */
+  }
+
+  .section {
+    order: initial; /* Восстанавливаем порядок */
+  }
+}
+
+.section__highlight-no {
+  font-size: clamp(1rem, 2vw, 1.5rem); /* Адаптивный размер текста */
+  background-color: #FF8DCB; /* Цвет выделения */
+  display: block; /* Делаем элемент блочным */
+  width: 100%; /* Растягиваем на всю ширину */
+  padding: 0.1rem 0; /* Добавляем внутренние отступы */
+  box-sizing: border-box; /* Учитываем padding в ширине */
+  margin-bottom: 0.5rem;
+  margin-top: 1.5rem; /* Добавляем внешние отступы */
+}
