--- a/styles/light.css
+++ b/styles/light.css
@@ -25,14 +25,20 @@
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    --background-color: #ffffff;
-    --text-color: #000000;
-    --accent-color: #ff8dcb;
-    --header-background: #f5f5f5;
-    --button-background: #e0e0e0;
-    --button-hover: #bdbdbd;
-
+  
+    :root {
+      --background-color: #ffffff; /* Фон страницы */
+      --text-color: #353430; /* Основной цвет текста */
+      --accent-color: #FF8DCB; /* Акцентный цвет */
+      --header-background: #f5f5f5; /* Фон шапки */
+      --button-background: #e0e0e0; /* Фон кнопок */
+      --button-hover: #bdbdbd; /* Фон кнопок при наведении */
+    
+      /* Вендорные префиксы */
+      -webkit-text-fill-color: var(--text-color); /* Цвет текста для Safari */
+      -moz-text-fill-color: var(--text-color); /* Цвет текста для Firefox */
+      -o-text-fill-color: var(--text-color); /* Цвет текста для Opera */
+    
     /* Дополнительные стили для декоративных элементов */
     .header__rec {
       display: none; /* Скрываем REC в светлой теме */
@@ -43,3 +49,6 @@
     }
   }
 }
+
+
+
